k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miowsis-service
  labels:
    app: miowsis
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: miowsis
    component: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: miowsis-nodeport
  labels:
    app: miowsis
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
    nodePort: 30000
  selector:
    app: miowsis
    component: frontend
